# contrast

./: .gitignore  .gitmodules  .travis.yml  2truth1lie.md  404.html  About Me.md  About.md  Aboutme.md  Blog.html  CESMlinks.md  CNAME  CV.html  CV.md  Disciplinas.md  Experience.html  Gemfile  Index.md  Introdução-ao-R.html  LICENSE  OCD.md  Outputs.md  Portfolio.md  Profile_page_index.html  Projects.html  Publications.html  Publications.md  README.md  Research.md  Resources.md  Teaching.md  Workshops.md  _config.yml  about.md  aboutMe.md  aboutTL.md  about_me.md  aboutme.md  advanced.sass  apps.md  archive.html  (+71 more)
Blogs/: animation.md  composition.md  desmos.md  puzzles.md  random.md
Category/: Micro.html
Portfolio/: test.txt
_drafts/: 2020-04-22-test.markdown
_includes/: analytics.html  archive.html  catmenu.html  comment.html  comment_form.html  comments.html  critical.scss  disqus.html  embed.html  footer.html  head.html  home.html  home2.html  menu.html  meta.html  nav.html  partners.html  post.html  recipe-icon.html  responsive-image.html  search-lunr.html  sidebar.html  social-icon.html  text-expand.html  youtubePlayer.html
_layouts/: analytics.html  archive.html  archivebycategory.html  blank.html  blog.html  category.html  crossword.html  crosswords.html  default.html  drink.html  drinks.html  home.html  lizard.html  page.html  page_blank.html  paginate.html  post.html  post_tags_page.html  recipe.html  recipes.html  research.html  tag.html
_posts/: 15code-graveyard.md  2017-01-01-HOG.md  (+295 more)
graveyard/cs253/hw7/: CMakeLists.txt  Words.cc  Words.h  test.cc
(+200 files in other folders)
